2005-05-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-make-date-string):
	Don't modify the date if it is one given temporarily.
	(shimbun-mainichi-prepare-article): Fix regexp for fixing the date.

	* w3m-util.el (w3m-truncate-string): Autoload mule-util for
	truncate-string-to-width.

2005-05-26  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* w3m.el (w3m-safe-view-this-url): `unsecure' -> `insecure'.
	(w3m-safe-toggle-inline-image): Ditto.
	(w3m-safe-toggle-inline-images): Ditto.

2005-05-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-text.el (shimbun-fill-line): Make it work correctly
	also with XEmacs.

	* shimbun/sb-mainichi.el (shimbun-mainichi-prefer-text-plain): New
	variable.
	(shimbun-mainichi-get-headers): Use shimbun-strip-cr.
	(shimbun-mainichi-prepare-article): Use
	shimbun-with-narrowed-article; remove the paragraph separators in
	the column.yoroku group; open paragraphs and fix the position of
	the footer in text/plain articles.

	* shimbun/sb-yahoo.el (shimbun-make-contents): Use
	shimbun-with-narrowed-article; fix the picture tag.

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-get-top-header): Fix
	message-id.
	(shimbun-yomiuri-prepare-article): Use
	shimbun-with-narrowed-article.

	* shimbun/shimbun.el (shimbun-insert-footer): New function.
	(shimbun-make-html-contents): Use it.
	(shimbun-footer): Don't prepend a newline; use <div align="left">
	instead of <p align="left">.
	(shimbun-header-insert-and-buffer-string): Use
	shimbun-insert-footer.
	(shimbun-with-narrowed-article): New macro.

2005-05-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi-html.el: Don't require shimbun.
	(shimbun-asahi-html-prefer-text-plain): New constant.
	(shimbun-asahi-html-content-start): Move to sb-asahi.el.
	(shimbun-asahi-html-content-end): Ditto.
	(shimbun-make-contents): Remove.

	* shimbun/sb-asahi.el (shimbun-asahi): Don't inherit sb-text.
	(shimbun-asahi-prefer-text-plain): New variable.